[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recon-agent"
version = "0.1.0"
description = "AI-powered bug bounty recon — from scope to prioritized findings in one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["bug-bounty", "recon", "security", "ai", "nuclei", "subfinder", "pentesting"]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "ollama>=0.1.0",
]

[project.scripts]
recon-agent = "recon_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon_agent*"]
